--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sankar`s personal website</title>
+  <title>Kumar Sai Sankar Javvaji Portfolio</title>
 </head>
 
 <body>
